# google-test-example

./: CMakeLists.txt  README.md  google-test-workspace_exe  google-test-workspace_test  google-test_exe  google-test_test
application/: CMakeLists.txt
application/include/: account.hpp  application.hpp  number_generator.hpp  validator.hpp
application/include/database_connection/: database_connection.hpp  employee.hpp  employee_manager.hpp
application/src/: account.cc  application.cc  main.cc  number_generator.cc  simple_function.cc  validator.cc
application/src/database_connection/: database_connection.cc  employee_manager.cc
project/: CMakeLists.txt
project/include/: test_code.hpp
project/src/: main.cc  test_code.cc
test/: CMakeLists.txt  README.md  main.cc  test_bench.cc  test_main.cc
test/mock_test/: README.md  callback_test.cc  mock_test.cc  vector_test.cc
test/unit_test/: README.md  parameterized_test.cc  test_fixture.cc  unit_test.cc  window_unix.cc
